# fluxomics_data_model

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lighthouserc.json  run_tests.yml  test_docs.yml
data/Sergi_master/: AA_HPLC.xlsx  README.md
data/Sergi_master/GCMS23/: FeatureDB_freqs.csv  FeatureDB_height.csv  PivotTable_freqs.csv  PivotTable_height.csv
data/Sergi_master/ecolimodel/: all_exps.ipynb  all_exps.py  test_fluxes.csv  test_model.csv  test_ms.csv  test_tracers.csv
data/Sergi_master/ecolimodel/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  initial_model-checkpoint.ipynb
data/Sergi_master/ecolimodel/.virtual_documents/: Untitled.ipynb
data/Sergi_master/ecolimodel/input/: fluxes.csv  fluxes_03.csv  fluxes_03_2.csv  fluxes_04.csv  fluxes_04_2.csv  fluxes_2.csv  fluxes_all.csv  measurements.csv  measurements_all.csv  measurements_noheavy.csv  measurements_noheavy_error.csv  model.xlsx  tracers.csv
data/Sergi_master/ecolimodel/output/: SA04.mat  (+35 more)
data/Sergi_master/fluxomics/: SA27.mat  SA27_03.mat  SA27_03_2.mat  SA27_04.mat  SA27_04_2.mat  SA27_2.mat  SA27_script.txt  flux_diff.csv  inca_ex.py  output_check.ipynb  ssr.csv
data/toy_model/: flux.csv  model.json  ms_measurements.csv  reactions.csv  tracers.csv
docs/: accessibility.md  index.md
docs/api/: fluxomics_dataset.md  reaction_network.md
src/fluxomics_data_model/: fluxml_gemini.py  fluxomics_dataset.py  parse_fluxml_gemini.py  reaction_network.py
tests/test_unit/: test_fluxomics_dataset.py  test_reaction_network.py
(+49 files in other folders)
